plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fitian'
version = '0.0.1-SNAPSHOT'
description = 'burntz project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "1.0.1")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

    //ai 추가 할 때 주석 해제
//	implementation 'org.springframework.ai:spring-ai-starter-model-anthropic'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//헬스체크 url
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	//postgresql 의존성
	implementation 'org.postgresql:postgresql'

    // Swagger 사용을 위한 의존성
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    //로그인 관련 의존성
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//Redis
//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //Apple id_token 파싱을 위한 라이브러리
    implementation 'com.nimbusds:nimbus-jose-jwt:10.4.2'

	//Firebase Cloud Messaging
	implementation 'com.google.firebase:firebase-admin:9.6.0'

    implementation 'com.google.cloud:google-cloud-firestore:3.32.2'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
